Header for mobiles in work

--- a/src/index.html
+++ b/src/index.html
@@ -17,42 +17,48 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="header__container container">
-                <div class="header__wrapper row">
-                    <div class="header__logo image-bg col-3 col-lg-3 col-xl-4">
-                        <a href="#">
-                            <img src="./img/header/logo.svg" alt="WS Hosting логотип">
-                        </a>
-                    </div>
-                    <ul class="header__contacts col-4 col-xl-2">
-                        <li class="header__phone contact">
-                            <div class="contact__icon">
-                                <img src="./img/header/phone.svg" alt="телефон">
+            <div class="header-overlay"></div>
+            <div class="header__block">
+                <div class="header__container container">
+                    <div class="header__wrapper row">
+                        <div class="header__logo image-bg col-3 col-xl-4">
+                            <a href="#">
+                                <img src="./img/header/logo.svg" alt="WS Hosting логотип">
+                            </a>
+                        </div>
+                        <div class="header__mobile col-md-9 col-xl-8">
+                            <ul class="header__contacts">
+                                <li class="header__phone contact">
+                                    <div class="contact__icon">
+                                        <img src="./img/header/phone.svg" alt="телефон">
+                                    </div>
+                                    <div class="contact__contact">
+                                        <a href="tel:+7(495)123-45-56">+7 (495) 123-45-56</a>
+                                    </div>
+                                </li>
+                                <li class="header__phone contact">
+                                    <div class="contact__icon contact__icon_email">
+                                        <img src="./img/header/email.svg" alt="электронная почта">
+                                    </div>
+                                    <div class="contact__contact">
+                                        <a href="mailto:support@wshost.ru">support@wshost.ru</a>
+                                        <p class="contact__contact_footnote">(поддержка 24/7)</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="header__buttons">
+                                <button class="header__button button button_blue button-text button-text_small">
+                                    Купить хостинг
+                                </button>
+                                <button class="header__login">
+                                    <img src="./img/header/login.svg" alt="личный кабинет">
+                                </button>
                             </div>
-                            <div class="contact__contact">
-                                <a href="tel:+7(495)123-45-56">+7 (495) 123-45-56</a>
-                            </div>
-                        </li>
-                        <li class="header__phone contact">
-                            <div class="contact__icon contact__icon_email">
-                                <img src="./img/header/email.svg" alt="электронная почта">
-                            </div>
-                            <div class="contact__contact">
-                                <a href="mailto:support@wshost.ru">support@wshost.ru</a>
-                                <p class="contact__contact_footnote">(поддержка 24/7)</p>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="header__buttons col-5 col-xl-6">
-                        <button class="header__button button button_blue button-text button-text_small">
-                            Купить хостинг
-                        </button>
-                        <button class="header__login">
-                            <img src="./img/header/login.svg" alt="личный кабинет">
-                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
+
 
             <nav class="header__nav">
                 <div class="header__container container">
