--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <div class="header__container container">
                     <div class="header__wrapper row">
                         <div class="header__logo image-bg col-3 col-xl-4">
-                            <a href="#">
+                            <a href="#" data-scroll="#header">
                                 <img src="./img/header/logo.svg" alt="WS Hosting логотип">
                             </a>
                         </div>
@@ -64,16 +64,16 @@
                 <div class="header__container container">
                     <ul class="header__menu">
                         <li class="header__link main-text">
-                            <a href="#">хостинг</a>
+                            <a href="#" data-scroll="#tariff">хостинг</a>
                         </li>
                         <li class="header__link main-text">
-                            <a href="#">vps</a>
+                            <a href="#" data-scroll="#hosting">vps</a>
                         </li>
                         <li class="header__link main-text">
-                            <a href="#">регистрация доменов</a>
+                            <a href="#" data-scroll="#names">регистрация доменов</a>
                         </li>
                         <li class="header__link main-text">
-                            <a href="#">ssl</a>
+                            <a href="#" data-scroll="#sll">ssl</a>
                         </li>
                         <li class="header__link main-text">
                             <a href="#" class="dropdown">хостинг-провайдер
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </section>
-            <section class="tariff">
+            <section class="tariff" id="tariff">
                 <div class="tariff__container container">
                     <h2 class="tariff__title header-2">Тарифы на хостинг</h2>
                     <div class="tariff__about main-text">
@@ -647,7 +647,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="sll">
+            <section class="sll" id="sll">
                 <div class="sll__container container">
                     <h2 class="sll__title header-2">SSL-сертификаты</h2>
                     <div class="sll__about main-text">
@@ -752,7 +752,7 @@
                 </div>
             </section>
             <div class="names-hosting">
-                <section class="names">
+                <section class="names" id="names">
                     <div class="names__container container">
                         <h2 class="sll__title header-2">Доменные имена</h2>
                         <div class="names__wrapper row">
@@ -870,7 +870,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="hosting">
+                <section class="hosting" id="hosting">
                     <div class="hosting__container container">
                         <h2 class="sll__title header-2">Хостинг VPS/VDS серверов
                         </h2>
