Added dropdown menu

--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,18 @@
                         <li class="header__link main-text">
                             <a href="#" data-scroll="#sll">ssl</a>
                         </li>
-                        <li class="header__link main-text">
-                            <a href="#" class="dropdown">хостинг-провайдер
-                                <img src="./img/header/arrow-down.svg" alt="стрелка вниз выпадающего меню">
-                            </a>
+                        <li class="header__link main-text" id="dropdown">
+                            <div class="dropdown">
+                                <button class="dropdown__button">хостинг-провайдер</button>
+                            </div>
+                            <ul class="dropdown__wrapper">
+                                <li class="dropdown__item">
+                                    <a href="#">Пункт №1</a>
+                                </li>
+                                <li class="dropdown__item">
+                                    <a href="#">Пункт №2</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
