--- a/index.html
+++ b/index.html
@@ -1360,7 +1360,7 @@
         </footer>
     </div>
 
-    <script src="./js/bundle.js"></script>
+    <script src="./js/bundle.min.js"></script>
 </body>
 
 </html>
